Increased JAVA heapsize. Updated version to 0.0.7